Fix logo position and button alignments

--- a/src/sass/themes/wwf.scss
+++ b/src/sass/themes/wwf.scss
@@ -441,6 +441,11 @@
 
   @media screen and (min-width: 600px) {
     &[data-header-footer-layout="none"] {
+      .body-title {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+      }
       .body-title::before {
         align-items: center;
         background: #fff url(https://acb0a5d73b67fccd4bbe-c2d8138f0ea10a18dd4c43ec3aa4240a.ssl.cf5.rackcdn.com/10114/logo-standalone.png?1) no-repeat;
@@ -450,7 +455,7 @@
         background-position: 50%;
         background-size: contain;
         content: "WWF Logo";
-        display: flex;
+        display: inline-block;
         flex-shrink: 0;
         height: 100px;
         justify-content: center;
@@ -633,6 +638,7 @@
   }
 
   .give-by-select input[type="radio"] + label {
+    align-items: center;
     padding: 11px 32px;
     height: 48px;
     max-height: 48px;
@@ -651,6 +657,10 @@
   .give-by-select .venmo label > img:last-of-type {
     height: 20px;
     margin-top: 5px;
+  }
+
+  .giveBySelect {
+    text-align: center;
   }
 
   .divider-top {
